New/updates guides/libs, stars, etc.

--- a/_drafts/2020-08-11-draft.md
+++ b/_drafts/2020-08-11-draft.md
@@ -5,7 +5,7 @@ date: 2020-08-03 07:00:00 -0800
 categories: weekly
 ---
 
-- [ ] Kattni updates
+- [X] Kattni updates
 - [ ] change date
 - [ ] update title
 - [ ] Feature story
@@ -86,11 +86,13 @@ Looking for adding a new board to CircuitPython? It's highly encouraged! Adafrui
 
 [![title](../assets/20200mdd/20200mddlearn.jpg)](https://learn.adafruit.com/)
 
-[title](url) from [name](url)
+[PyRuler Video Conference Panic Buttons](https://learn.adafruit.com/PyRulerVideoPanic) from [John Thurmond](https://learn.adafruit.com/users/grajohnt)
 
-## Updated Learn Guides!
+[MIDI Solenoid Drum Kit](https://learn.adafruit.com/midi-solenoid-drum-kit) from [Noe and Pedro](https://learn.adafruit.com/users/pixil3d)
 
-[title](url) from [name](url)
+[Adafruit TDK InvenSense ICM-20948 9-DoF IMU](https://learn.adafruit.com/adafruit-tdk-invensense-icm-20948-9-dof-imu) from [Bryan Siepert](https://learn.adafruit.com/users/siddacious)
+
+[DIY Robotic Sky Tracking Astrophotography Mount with CircuitPython](https://learn.adafruit.com/diy-robotic-sky-tracking-astrophotography-mount) from [Dylan Herrada](https://learn.adafruit.com/users/dherrada)
 
 ## CircuitPython Libraries!
 
@@ -104,19 +106,23 @@ If you'd like to contribute, CircuitPython libraries are a great place to start.
 
 You can check out this [list of all the Adafruit CircuitPython libraries and drivers available](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/blob/master/circuitpython_library_list.md). 
 
-The current number of CircuitPython libraries is **###**!
+The current number of CircuitPython libraries is **264**!
 
 **New Libraries!**
 
 Here's this week's new CircuitPython libraries:
 
-* [library](url)
+ * [Adafruit_CircuitPython_MS8607](https://github.com/adafruit/Adafruit_CircuitPython_MS8607)
 
 **Updated Libraries!**
 
 Here's this week's updated CircuitPython libraries:
-
-* [library](url)
+ * [Adafruit_CircuitPython_BME680](https://github.com/adafruit/Adafruit_CircuitPython_BME680)
+ * [Adafruit_CircuitPython_MCP230xx](https://github.com/adafruit/Adafruit_CircuitPython_MCP230xx)
+ * [Adafruit_CircuitPython_ProgressBar](https://github.com/adafruit/Adafruit_CircuitPython_ProgressBar)
+ * [Adafruit_CircuitPython_Display_Shapes](https://github.com/adafruit/Adafruit_CircuitPython_Display_Shapes)
+ * [Adafruit_CircuitPython_GC_IOT_Core](https://github.com/adafruit/Adafruit_CircuitPython_GC_IOT_Core)
+ * [Adafruit_CircuitPython_MiniMQTT](https://github.com/adafruit/Adafruit_CircuitPython_MiniMQTT)
 
 **PyPI Download Stats!**
 
@@ -206,7 +212,7 @@ CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpyt
 
 [#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
 
-[### Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
+[1791 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
 ## Call for help -- Translating CircuitPython is now easier than ever!
 
