--- a/_drafts/2020-08-11-draft.md
+++ b/_drafts/2020-08-11-draft.md
@@ -227,9 +227,13 @@ At the moment, I'm working on bringing the Sharp Memory Display forward into the
 
 **Kattni**
 
-[![Kattni](../assets/20200811/kattni.jpg)](https://circuitpython.org/)
+I updated the BME680 and 0.96" OLED display guides to feature the STEMMA QT version, assisted with the ICM20948 guide, and started the guide for the ST25DV16K.
 
+I created a few more Fritzing objects. Check out the Adafruit Fritzing Library for a sneak peek at some future products.
 
+I created a new role on the Adafruit Discord server - the PCB Helpers role - and invited three community members who were already quite active in the #pcb-design channel to join the role. All three accepted. If you have questions about PCB design, these folks are here to help.
+
+I also took some time to take care of some miscellaneous things that needed to be done. There are plenty of things that are taking priority, but ensuring that I'm keeping up with the misc. is equally important.
 
 **Lucian**
 
