CP Weekly, PyDev, v-numbers

--- a/_drafts/2020-08-11-draft.md
+++ b/_drafts/2020-08-11-draft.md
@@ -215,6 +215,10 @@ latexify_py - Generates LaTeX math description from Python functions - [Twitter]
 
 Reminder: the deadline to nominate someone for a third quarter Python Software Foundation Fellow membership is Aug. 20. To see the criteria and send your nomination, please visit [python.org](https://python.org/psf/fellows/).
 
+PyDev of the Week: Julia Signell on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/08/10/pydev-of-the-week-julia-signell/)
+
+CircuitPython Weekly for August 10th, 2020 [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-08-10.md) [on YouTube](https://youtu.be/c_9t80xERyA)
+
 **#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).**
 
 ## Python Editing with Mu
@@ -394,13 +398,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200810](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[v1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.5](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0b5](https://www.python.org/download/pre-releases/).
 
 [1791 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
