Update with some recent MicroPython news

--- a/_drafts/2020-08-18-draft.md
+++ b/_drafts/2020-08-18-draft.md
@@ -68,6 +68,44 @@ Adafruit has chosen September 9, 2020 (9/9/2020) as the snakiest day of this yea
 
 Production is up and now is the best time to get the Adafruit items you've been waiting for.
 
+## MicroPython News
+![MicroPython](../assets/20200818/micropython_logo.png)
+
+### Season of Docs
+![Season of Docs](../assets/20200818/season_of_docs_logo_100w.png)
+
+MicroPython was accepted as an organization for [Google Season of Docs](https://developers.google.com/season-of-docs)! This means that there will be a dedicated three-month resource allocated to improving the MicroPython documentation. Read the list of [MicroPython Season of Docs Project Ideas](https://docs.google.com/document/d/1HA33eIywBRq1shKK1JlCHLJ-V_AAQwDfxPjbmDQF0FU/edit#heading=h.a1500lmxfhiv) and take a look at the other [accepted organizations](https://developers.google.com/season-of-docs/docs/participants/).
+
+### Inkplate 6
+![Season of Docs](../assets/20200818/inkplate_150w.png)
+
+The [Inkplate 6](https://www.crowdsupply.com/e-radionica/inkplate-6) is a 6" e-paper device powered by an ESP32 and was recently funded on Crowd Supply. Help out with the [active port of MicroPython](https://github.com/tve/micropython-inkplate6) for the Inkplate!
+
+### TTGO Watch
+![Season of Docs](../assets/20200818/ttgowatch_150w.jpg)
+
+The latest [TTGO Watch](https://www.tindie.com/products/ttgo/lilygor-ttgo-t-watch-2020/) has been released on Tindie. The watch is based on an ESP32 with a colour 1.54" display with touchscreen. It's proven popular in the [MicroPython forums](https://forum.micropython.org/viewtopic.php?f=18&t=8642) with a couple of repositories created to support the device.
+
+### Wasp-OS for the PineTime
+![Season of Docs](../assets/20200818/waspos_150w.jpg)
+
+Daniel Thompson continues to improve his MicroPython-powered [wasp-os project](https://github.com/daniel-thompson/wasp-os) that aims to bring a powerful, free and open source platform to the nRF52832-powered [PineTime watch](https://www.pine64.org/pinetime/). His [videos](https://www.youtube.com/channel/UCojjA-AuEQQJiR0Vn18ytIw) are a great way to get a sense for what's currently possible with this exciting project. Particularly cool - Daniel recently covered how the [heart rate monitor](https://www.youtube.com/watch?v=lIo2-djNR48) feature was developed.
+
+### Awesome MicroPython
+![Season of Docs](../assets/20200818/awesome_micropython_150w.png)
+
+MicroPython has had a couple of awesome lists but [mcausers Awesome List](https://awesome-micropython.com/) must be the most awesome of them all! There are a _couple of hundred_ curated links to libraries and tools, all with brief descriptions and grouped logically. Contributions are welcome!
+
+### Blyst 840
+![Season of Docs](../assets/20200818/blyst_150w.jpg)
+
+The _tiny_ [Blyst 840](https://www.crowdsupply.com/i-syst/blyst840) nRF52840 module is _amazingly_ powerful - and did we mention that it's absolutely _tiny_? The creator, Hoan Hoang, has continued his support for MicroPython by submitting ports for the module and for the associated development boards.
+
+### Melbourne MicroPython Meetup
+
+Matt has published the last couple of [Melbourne MicroPython Meetup](https://melbournemicropythonmeetup.github.io) News Roundups; read more about what's been happening in the MicroPython community in Australia and abroad.
+
+
 ## News from around the web!
 
 [![CircuitPython CLUE Menu System](../assets/20200818/20200818menu.jpg)](https://github.com/jisforjt/CircuitPython_CLUE_Menu)
