new categories organization

--- a/_drafts/2020-08-18-draft.md
+++ b/_drafts/2020-08-18-draft.md
@@ -110,25 +110,37 @@ Science is fun and educational when using Adafruit parts and free, easy to follo
 
 ## CircuitPython News
 
+### Menus on CLUE
+
 [![CircuitPython CLUE Menu System](../assets/20200818/20200818menu.jpg)](https://github.com/jisforjt/CircuitPython_CLUE_Menu)
 
 CircuitPython_CLUE_Menu - make your Adafruit CLUE multi-functional by adding a nifty startup menu to select the program you want to run. You no longer need to rename your files to code or main to run them. Simply drag and drop your files into your CIRCUITPY drive and this menu program does the rest - [GitHub](https://github.com/jisforjt/CircuitPython_CLUE_Menu) and [YouTube](https://www.youtube.com/watch?v=ZTE-hqM6GPo&feature=youtu.be).
+
+### M4 Capacitive Touch
 
 [![CircuitPython on M4 chips doing capsense touchio](../assets/20200818/20200818touch.gif)](https://twitter.com/todbot/status/1294012752566992896)
 
 A video example with complete code of Adafruit CircuitPython on M4 chips doing capsense touchio - [Twitter](https://twitter.com/todbot/status/1294012752566992896).
 
+### CircuitPython Fireflies
+
 [![Simulating firefly flashes in CircuitPython](../assets/20200818/20200818firefly.jpg)](https://github.com/mwweinberg/firefly)
 
 Simulating firefly flashes with NeoPixel LEDs in CircuitPython - [GitHub](https://github.com/mwweinberg/firefly).
+
+### Using Blinka on the Zynq
 
 [![Pi OS for Zynqberry: Adafruit RFM69 Radio with CircuitPython](../assets/20200818/20200818zinq.jpg)](https://www.hackster.io/whitney-knitter/pi-os-for-zynqberry-adafruit-rfm69-radio-with-circuitpython-1ae658)
 
 Pi OS for Zynqberry: Adafruit RFM69 Radio with Python, CircuitPython and Adafruit Blinka - [hackster.io](https://www.hackster.io/whitney-knitter/pi-os-for-zynqberry-adafruit-rfm69-radio-with-circuitpython-1ae658) and [Twitter](https://twitter.com/knitronics/status/1293989403308830725).
 
+### And Blinka on Odroid XU4
+
 [![Using an ILI9341 LCD with an Odroid XU4 in Python](../assets/20200818/20200818odroid.jpg)](https://github.com/mateo/Odroid-ILI9341)
 
 Scripts for using an ILI9341 LCD with an Odroid XU4 in Python via Adafruit Blinka and CircuitPython - [GitHub](https://github.com/mateo/Odroid-ILI9341).
+
+### New CircuitPython Books
 
 [![Two New Books](../assets/20200818/20200818books.jpg)](https://www.amazon.com/Rick-Leander/e/B001HD39P2)
 
@@ -136,6 +148,8 @@ Two new books on using CircuitPython:
 
 - [Ten Games for the Circuit Playground Express](https://www.amazon.com/gp/product/B08CL3BTZS/)
 - [Make Music with the Circuit Playground Express: Twelve projects that make music, sound and noise](https://www.amazon.com/gp/product/B088LV7Q8Y/)
+
+### Model Train Control
 
 [![Model Train Speed with CircuitPython](../assets/20200818/20200818north.jpg)](https://www.youtube.com/watch?v=qfeTMSwESA8)
 
