--- a/_drafts/2020-08-25-draft.md
+++ b/_drafts/2020-08-25-draft.md
@@ -160,6 +160,8 @@ Poetry: Dependency Management for Python - Poetry helps you declare, manage and 
 
 Using the Python functions range vs enumerate, video - [Real Python](https://realpython.com/lessons/range-vs-enumerate/).
 
+PyDev of the Week: Ethan Smith on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/08/24/pydev-of-the-week-ethan-smith/)
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/08/18/python-on-microcontrollers-newsletter-circuitpython-takes-flight-dedicating-circuitpython-day-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [CircuitPython Takes Flight in MS Flight Simulator](https://www.hackster.io/wallarug/custom-flight-control-column-part-1-f326a8).
 
 ## New Boards Supported by CircuitPython
@@ -321,13 +323,13 @@ As for other events, with the COVID pandemic, most in-person events are postpone
 
 ## Latest releases
 
-CircuitPython's stable release is [#.#.#](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [#.#.#-##.#](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
+CircuitPython's stable release is [5.3.1](https://github.com/adafruit/circuitpython/releases/latest) and its unstable release is [6.0.0-alpha.2](https://github.com/adafruit/circuitpython/releases). New to CircuitPython? Start with our [Welcome to CircuitPython Guide](https://learn.adafruit.com/welcome-to-circuitpython).
 
-[2019####](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
+[20200824](https://github.com/adafruit/Adafruit_CircuitPython_Bundle/releases/latest) is the latest CircuitPython library bundle.
 
-[v#.#.#](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
+[1.12](https://micropython.org/download) is the latest MicroPython release. Documentation for it is [here](http://docs.micropython.org/en/latest/pyboard/).
 
-[#.#.#](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [#.#.#](https://www.python.org/download/pre-releases/).
+[3.8.5](https://www.python.org/downloads/) is the latest Python release. The latest pre-release version is [3.9.0rc1](https://www.python.org/download/pre-releases/).
 
 [1,806 Stars](https://github.com/adafruit/circuitpython/stargazers) Like CircuitPython? [Star it on GitHub!](https://github.com/adafruit/circuitpython)
 
