Add meeting video and notes

--- a/_drafts/2020-08-25-draft.md
+++ b/_drafts/2020-08-25-draft.md
@@ -162,6 +162,8 @@ Using the Python functions range vs enumerate, video - [Real Python](https://rea
 
 PyDev of the Week: Ethan Smith on [Mouse vs Python](https://www.blog.pythonlibrary.org/2020/08/24/pydev-of-the-week-ethan-smith/)
 
+CircuitPython Weekly for August 24, 2020 [on YouTube](https://youtu.be/VOM5JUigFfE) and [notes](https://github.com/adafruit/adafruit-circuitpython-weekly-meeting/blob/master/2020/2020-08-24.md).
+
 #ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://www.adafruitdaily.com/2020/08/18/python-on-microcontrollers-newsletter-circuitpython-takes-flight-dedicating-circuitpython-day-and-more-python-adafruit-circuitpython-circuitpython-micropython-thepsf/)? [CircuitPython Takes Flight in MS Flight Simulator](https://www.hackster.io/wallarug/custom-flight-control-column-part-1-f326a8).
 
 ## New Boards Supported by CircuitPython
