Added link to new Woolsey Workshop article.
Added link to new Getting Started With CircuitPython On Compatible Microcontroller Boards article written by Woolsey Workshop.

--- a/_drafts/2020-09-01-draft.md
+++ b/_drafts/2020-09-01-draft.md
@@ -71,7 +71,7 @@ Science is fun and educational when using Adafruit parts and free, easy to follo
 
 [![title](../assets/20200901/20200901-name.jpg)](https://circuitpython.org/)
 
-Text
+[Woolsey Workshop](https://www.woolseyworkshop.com) wrote the [Getting Started With CircuitPython On Compatible Microcontroller Boards article](https://www.woolseyworkshop.com/2020/08/28/getting-started-with-circuitpython-on-compatible-microcontroller-boards/) to help people get up and running with CircuitPython.
 
 **#ICYDNCI What was the most popular, most clicked link, in [last week's newsletter](https://link)? [title](url).**
 
